SERVER-90776 Critical section is not respected on create (#23588)

GitOrigin-RevId: 4f985e177793bec98515c93b23a7eb46ead10f8a