src/mongo/db/s/shardsvr_create_collection_command.cpp
@@ -101,9 +101,26 @@ bool requestsShouldBeSerialized(OperationContext* opCtx,
     return true;
 }
 
+boost::optional<ScopedSetShardRole> setShardRoleToUnshardedIfNeeded(OperationContext* opCtx,
+                                                                    const NamespaceString& nss) {
+    auto& oss = OperationShardingState::get(opCtx);
+    if (!oss.getShardVersion(nss) && OperationShardingState::isComingFromRouter(opCtx)) {
+        return ScopedSetShardRole{
+            opCtx, nss, ShardVersion::UNSHARDED(), oss.getDbVersion(nss.dbName())};
+    }
+    return boost::none;
+}
+
 void runCreateCommandDirectClient(OperationContext* opCtx,
                                   NamespaceString ns,
                                   const CreateCommand& cmd) {
+
+    // Set the ShardVersion to UNSHARDED on the OperationShardingState for the given namespace to
+    // make sure we honor the critical section once the ShardVersion is checked. Note that the
+    // critical section will only be checked if there is a ShardVersion attached to the
+    // OperationShardingState.
+    auto shardRole = setShardRoleToUnshardedIfNeeded(opCtx, ns);
+
     BSONObj createRes;
     DBDirectClient localClient(opCtx);
     CreateCommand c = cmd;
